<resources
	xmlns:tools="http://schemas.android.com/tools">
	<string name="about">About</string>
	<string name="enable">Enable</string>
	<string name="format">Format</string>
	<string name="format_info">Format Info</string>
	<string name="donation">Donation</string>
	<string name="donation_info">I hope you are liking Snorlax!\n\nIf you do, you can support this project to keep coming with new features by buying me a cup of coffee (so i can code by night) or a BigMac at McDonalds. Click the button below and thanks you (look at the end of the README file)!</string>
	<string name="donation_url">https://github.com/alucas/Snorlax#donation</string>
	<string name="about_version">Version %1$s</string>
	<string name="about_author">By igoticecream (igoticecream@gmail.com)\nForked by alucas (antoine.lucas.33@gmail.com)</string>
	<string name="about_github">This project is open source under the Apache 2.0 license. If you like this module, an star to this repo on my Github will help me a lot.</string>
	<string name="about_thanks">Special thanks for the github users chuparCh0pper for his PoGoIV_xposed project and ELynx for the method used to MITM PokemonGo communication.</string>
	<string name="about_repository">https://github.com/alucas/Snorlax</string>
	<string name="error_readable">Cannot make preference world readable</string>
	<string name="error_xposed_disabled">Snorlax module is not enabled</string>
	<string name="error_xposed_missing">Install xposed to use Snorlax</string>
	<string name="error_pokemon_missing">Install Pokemon Go to launch it</string>
	<string name="notification_pokemondata_title">GAME_MASTER updated!</string>
	<string name="notification_pokemondata_content">%s</string>
	<string name="notification_gym_eject_title">%1$s lost the battle!</string>
	<string name="notification_gym_eject_content">Ejected from : %s</string>
	<string name="notification_title">%1$s - CP %2$d - Lvl %3$3.1f</string>
	<string name="notification_content">{iv} %1$2.0f%% {flee} %2$2.0f%% {pokeball} %3$2.0f%% {greatball} %4$2.0f%% {ultraball} %5$2.0f%%</string>
	<string name="notification_categoty_stats_title">Stats</string>
	<string name="notification_categoty_stats_content_iv" tools:ignore="PluralsCandidate">{iv} %1$4.1f%% [%2$d att, %3$d def, %4$d sta]</string>
	<string name="notification_categoty_stats_content_hp">{hp} %1$d - {flee} flee %2$2.0f%%</string>
	<string name="notification_categoty_moves_title">Moves</string>
	<string name="notification_categoty_moves_fast">%1$s (%2$s %3$3.1f)</string>
	<string name="notification_categoty_moves_charge">%1$s (%2$s %3$3.1f)</string>
	<string name="notification_categoty_catch_title">Catch Rate</string>
	<string name="notification_categoty_catch_content">{pokeball} Poké %1$2.0f%% - {greatball} Great %2$2.0f%% - {ultraball} Ultra %3$2.0f%%</string>
	<string name="notification_symbol_pokeball_key">pokeball</string>
	<string name="notification_symbol_pokeball_value">⛑</string>
	<string name="notification_symbol_greatball_key">greatball</string>
	<string name="notification_symbol_greatball_value">⛑</string>
	<string name="notification_symbol_ultraball_key">ultraball</string>
	<string name="notification_symbol_ultraball_value">⛑</string>
	<string name="notification_symbol_flee_key">flee</string>
	<string name="notification_symbol_flee_value">⎋</string>
	<string name="notification_symbol_iv_key">iv</string>
	<string name="notification_symbol_iv_value">IV</string>
	<string name="notification_symbol_hp_key">hp</string>
	<string name="notification_symbol_hp_value">HP</string>
	<string name="preference_general">General</string>
	<string name="preference_general_mock_enable_key">general_mock_key</string>
	<string name="preference_general_mock_enable_title">Enable mock location</string>
	<string name="preference_general_mock_enable_summary">Prevent detection of mocking locations apps</string>
	<string name="preference_encounter_notification">Encounter Notifications</string>
	<string name="preference_encounter_notification_enable_key">encounter_notification_key</string>
	<string name="preference_encounter_notification_enable_title">Enable encounter notifications</string>
	<string name="preference_encounter_notification_enable_summary">Show encounter pokemons stats via system notification</string>
	<string name="preference_encounter_dismiss_notification_enable_key">encounter_dismiss_notification_key</string>
	<string name="preference_encounter_dismiss_notification_enable_title">Enable dismiss notifications</string>
	<string name="preference_encounter_dismiss_notification_enable_summary">Automatically dismiss notifications when catch status is success or flee</string>
	<string name="preference_lure">Lure</string>
	<string name="preference_lure_enable_key">lure_key</string>
	<string name="preference_lure_enable_title">Show lure remaining time</string>
	<string name="preference_lure_enable_summary">Show lure remaining time after the owner name</string>
	<string name="preference_rename">Show pokemons stats</string>
	<string name="preference_rename_enable_key">rename_key</string>
	<string name="preference_rename_enable_title">Enable pokemons stats</string>
	<string name="preference_rename_enable_summary">Show pokemons stats on their name at the inventory</string>
	<string name="preference_rename_favorite_enable_key">rename_favorite_key</string>
	<string name="preference_rename_favorite_enable_title">Show favorite pokemon stats</string>
	<string name="preference_rename_favorite_enable_summary">Rename your favorite pokemons with their stats</string>
	<string name="preference_rename_already_enable_key">rename_already_key</string>
	<string name="preference_rename_already_enable_title">Show nicknamed pokemon stats</string>
	<string name="preference_rename_already_enable_summary">Rename your already nicknamed pokemons with their stats</string>
	<string name="preference_rename_format_enable_key">rename_format_key</string>
	<string name="preference_rename_format_enable_title">Edit format</string>
	<string name="preference_rename_format_enable_summary"/>
	<string name="preference_rename_format_enable_default">%IVP.0% %ATT%/%DEF%/%STA% %LVL%</string>
	<string name="preference_rename_format_enable_dialog_title">Enter a format</string>
	<string name="preference_rename_format_name" formatted="false"><b>%NAME%</b> : Shows pokemon full name.\n<tt>%NAME% -> Snorlax</tt></string>
	<string name="preference_rename_format_name." formatted="false"><b>%NAME.#%</b> : Trims pokemon name by #.\n<tt>%NAME.3% -> Sno</tt></string>
	<string name="preference_rename_format_nick" formatted="false"><b>%NICK%</b> : Shows pokemon nickname if present, or pokemon name\n<tt>%NICK% -> Rainer\n%NICK% (no nickname) -> Vaporeon</tt></string>
	<string name="preference_rename_format_nick." formatted="false"><b>%NICK.#%</b> : Shows pokemon nickname if present, or trimmed pokemon name.\n<tt>%NICK.3% -> Rainer\n%NICK.3% (no nickname) -> Vap</tt></string>
	<string name="preference_rename_format_lvl" formatted="false"><b>%LVL%</b> : Shows pokemon level with one decimal.\n<tt>%LVL% -> 2.5</tt></string>
	<string name="preference_rename_format_lvl." formatted="false"><b>%LVL.#%</b> : Round up and trims pokemon level by # decimals.\n<tt>%LVL.0% -> 3\n%LVL.2% -> 2.50</tt></string>
	<string name="preference_rename_format_lvlp" formatted="false"><b>%LVLP%</b> : Same as %LVL% but add leading zeros.\n<tt>%LVLP% -> 02.5</tt></string>
	<string name="preference_rename_format_lvlp." formatted="false"><b>%LVLP.#%</b> : Same as %LVL.#% but add leading zeros.\n<tt>%LVLP.0% -> 03\n%LVLP.2% -> 02.50</tt></string>
	<string name="preference_rename_format_iv" formatted="false"><b>%IV%</b> : Shows pokemon iv with one decimal.\n<tt>%IV% -> 6.7</tt></string>
	<string name="preference_rename_format_iv." formatted="false"><b>%IV.#%</b> : Round up and trims pokemon iv by # decimals.\n<tt>%IV.0% -> 7\n%IV.2% -> 6.67</tt></string>
	<string name="preference_rename_format_ivp" formatted="false"><b>%IVP%</b> : Same as %IV% but add leading zeros.\n<tt>%IVP% -> 006.7</tt></string>
	<string name="preference_rename_format_ivp." formatted="false"><b>%IVP.#%</b> : Same as %IV.#% but add leading zeros.\n<tt>%IVP.0% -> 007\n%IVP.2% -> 006.67</tt></string>
	<string name="preference_rename_format_att" formatted="false"><b>%ATT%</b> : Shows pokemon attack.\n<tt>%ATT% -> 1</tt></string>
	<string name="preference_rename_format_attp" formatted="false"><b>%ATTP%</b> : Shows pokemon attack with leading zero.\n<tt>%ATTP% -> 01</tt></string>
	<string name="preference_rename_format_atth" formatted="false"><b>%ATTH%</b> : Shows pokemon attack with hexadecimal format.\n<tt>%ATTH% (15) -> F</tt></string>
	<string name="preference_rename_format_def" formatted="false"><b>%DEF%</b> : Shows pokemon defense.\n<tt>%DEF% -> 1</tt></string>
	<string name="preference_rename_format_defp" formatted="false"><b>%DEFP%</b> : Shows pokemon defense with leading zero.\n<tt>%DEFP% -> 01</tt></string>
	<string name="preference_rename_format_defh" formatted="false"><b>%DEFH%</b> : Shows pokemon defense with hexadecimal format.\n<tt>%DEFH% (15) -> F</tt></string>
	<string name="preference_rename_format_sta" formatted="false"><b>%STA%</b> : Shows pokemon stamina.\n<tt>%STA% -> 1</tt></string>
	<string name="preference_rename_format_stap" formatted="false"><b>%STAP%</b> : Shows pokemon stamina with leading zero.\n<tt>%STAP% -> 01</tt></string>
	<string name="preference_rename_format_stah" formatted="false"><b>%STAH%</b> : Shows pokemon stamina with hexadecimal format.\n<tt>%STAH% (15) -> F</tt></string>
	<string name="preference_rename_format_cp" formatted="false"><b>%CP%</b> : Shows pokemon CP.\n<tt>%CP% -> 1750</tt></string>
	<string name="preference_rename_format_cpl" formatted="false"><b>%CPL%</b> : Shows pokemon CP if evolved to the last stage. Return ‘?’ if multiple evolutions are possibles.\n<tt>%CPL% (Weedle) -> 2300\n%CPL% (Kakuna) -> 2300\n%CPL% (Beedrill) -> -\n%CPL% (Eevee) -> ?</tt></string>
	<string name="preference_rename_format_mv1" formatted="false"><b>%MV1%</b> : Shows pokemon fast attack.\n<tt>%MV1% -> Zen Headbutt</tt></string>
	<string name="preference_rename_format_mv2" formatted="false"><b>%MV2%</b> : Shows pokemon charge attack.\n<tt>%MV2% -> Seed bomb</tt></string>
	<string name="preference_rename_format_mv1." formatted="false"><b>%MV1.#%</b> : Trims pokemon fast attack by #.\n<tt>%MV1.3% -> Zen</tt></string>
	<string name="preference_rename_format_mvt1" formatted="false"><b>%MVT1%</b> : Shows pokemon fast attack type.\n<tt>%MVT1% -> Psychic</tt></string>
	<string name="preference_rename_format_mvt2" formatted="false"><b>%MVT2%</b> : Shows pokemon charge attack type.\n<tt>%MVT2% -> Grass</tt></string>
	<string name="preference_rename_format_mvp1" formatted="false"><b>%MVP1%</b> : Shows pokemon fast attack power.\n<tt>%MVP1% -> 12</tt></string>
	<string name="preference_rename_format_mvp2" formatted="false"><b>%MVP2%</b> : Shows pokemon charge attack power.\n<tt>%MVP2% -> 40</tt></string>
	<string name="preference_rename_format_mvp1p" formatted="false"><b>%MVP1P%</b> : Shows pokemon fast attack power with leading zero.\n<tt>%MVP1P% -> 012</tt></string>
	<string name="preference_rename_format_mvp2p" formatted="false"><b>%MVP2P%</b> : Shows pokemon charge attack power with leading zero.\n<tt>%MVP2P% -> 040</tt></string>
	<string name="preference_rename_format_typ1" formatted="false"><b>%TYP1%</b> : Shows pokemon first type.\n<tt>%TYP1% -> Normal</tt></string>
	<string name="preference_rename_format_typ2" formatted="false"><b>%TYP2%</b> : Shows pokemon second type.\n<tt>%TYP2% -> Electric</tt></string>
	<string name="preference_rename_format_note" formatted="false">Note: Snorlax wont format other that the above commands. This means that you could add a ‘%’ next to the Iv like this:\n<tt>%IV%% -> 6.7%</tt></string>
</resources>