<?xml version="1.0" encoding="UTF-8" ?>
<android.support.v4.widget.NestedScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:fillViewport="true"
	>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical"
		android:paddingBottom="@dimen/margin_vertical_dialog"
		android:paddingEnd="@dimen/margin_horizontal_dialog"
		android:paddingStart="@dimen/margin_horizontal_dialog"
		android:paddingTop="@dimen/margin_vertical_dialog"
		>

		<!-- Nickname -->
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="Nickname"
			android:textAppearance="?android:attr/textAppearance"
			android:textColor="@color/red_700"
			android:textIsSelectable="true"
			android:textStyle="bold"
			tools:ignore="HardcodedText"
			/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:padding="8dp"
			android:text="@string/preference_rename_format_nick"
			android:textAppearance="?android:attr/textAppearanceSmall"
			android:textIsSelectable="true"
			tools:ignore="HardcodedText"
			/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:padding="8dp"
			android:text="@string/preference_rename_format_nick."
			android:textAppearance="?android:attr/textAppearanceSmall"
			android:textIsSelectable="true"
			tools:ignore="HardcodedText"
			/>

		<!-- Level -->
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="Level"
			android:textAppearance="?android:attr/textAppearance"
			android:textColor="@color/red_700"
			android:textIsSelectable="true"
			android:textStyle="bold"
			tools:ignore="HardcodedText"
			/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:padding="8dp"
			android:text="@string/preference_rename_format_lvl"
			android:textAppearance="?android:attr/textAppearanceSmall"
			android:textIsSelectable="true"
			tools:ignore="HardcodedText"
			/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:padding="8dp"
			android:text="@string/preference_rename_format_lvl."
			android:textAppearance="?android:attr/textAppearanceSmall"
			android:textIsSelectable="true"
			tools:ignore="HardcodedText"
			/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:padding="8dp"
			android:text="@string/preference_rename_format_lvlp"
			android:textAppearance="?android:attr/textAppearanceSmall"
			android:textIsSelectable="true"
			tools:ignore="HardcodedText"
			/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:padding="8dp"
			android:text="@string/preference_rename_format_lvlp."
			android:textAppearance="?android:attr/textAppearanceSmall"
			android:textIsSelectable="true"
			tools:ignore="HardcodedText"
			/>

		<!-- Iv -->
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="IV"
			android:textAppearance="?android:attr/textAppearance"
			android:textColor="@color/red_700"
			android:textIsSelectable="true"
			android:textStyle="bold"
			tools:ignore="HardcodedText"
			/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:padding="8dp"
			android:text="@string/preference_rename_format_iv"
			android:textAppearance="?android:attr/textAppearanceSmall"
			android:textIsSelectable="true"
			tools:ignore="HardcodedText"
			/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:padding="8dp"
			android:text="@string/preference_rename_format_iv."
			android:textAppearance="?android:attr/textAppearanceSmall"
			android:textIsSelectable="true"
			tools:ignore="HardcodedText"
			/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:padding="8dp"
			android:text="@string/preference_rename_format_ivp"
			android:textAppearance="?android:attr/textAppearanceSmall"
			android:textIsSelectable="true"
			tools:ignore="HardcodedText"
			/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:padding="8dp"
			android:text="@string/preference_rename_format_ivp."
			android:textAppearance="?android:attr/textAppearanceSmall"
			android:textIsSelectable="true"
			tools:ignore="HardcodedText"
			/>

		<!-- Attack -->
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="Attack"
			android:textAppearance="?android:attr/textAppearance"
			android:textColor="@color/red_700"
			android:textIsSelectable="true"
			android:textStyle="bold"
			tools:ignore="HardcodedText"
			/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:padding="8dp"
			android:text="@string/preference_rename_format_att"
			android:textAppearance="?android:attr/textAppearanceSmall"
			android:textIsSelectable="true"
			tools:ignore="HardcodedText"
			/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:padding="8dp"
			android:text="@string/preference_rename_format_attp"
			android:textAppearance="?android:attr/textAppearanceSmall"
			android:textIsSelectable="true"
			tools:ignore="HardcodedText"
			/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:padding="8dp"
			android:text="@string/preference_rename_format_atth"
			android:textAppearance="?android:attr/textAppearanceSmall"
			android:textIsSelectable="true"
			tools:ignore="HardcodedText"
			/>

		<!-- Defense -->
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="Defense"
			android:textAppearance="?android:attr/textAppearance"
			android:textColor="@color/red_700"
			android:textIsSelectable="true"
			android:textStyle="bold"
			tools:ignore="HardcodedText"
			/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:padding="8dp"
			android:text="@string/preference_rename_format_def"
			android:textAppearance="?android:attr/textAppearanceSmall"
			android:textIsSelectable="true"
			tools:ignore="HardcodedText"
			/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:padding="8dp"
			android:text="@string/preference_rename_format_defp"
			android:textAppearance="?android:attr/textAppearanceSmall"
			android:textIsSelectable="true"
			tools:ignore="HardcodedText"
			/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:padding="8dp"
			android:text="@string/preference_rename_format_defh"
			android:textAppearance="?android:attr/textAppearanceSmall"
			android:textIsSelectable="true"
			tools:ignore="HardcodedText"
			/>

		<!-- Stamina -->
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="Stamina"
			android:textAppearance="?android:attr/textAppearance"
			android:textColor="@color/red_700"
			android:textIsSelectable="true"
			android:textStyle="bold"
			tools:ignore="HardcodedText"
			/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:padding="8dp"
			android:text="@string/preference_rename_format_sta"
			android:textAppearance="?android:attr/textAppearanceSmall"
			android:textIsSelectable="true"
			tools:ignore="HardcodedText"
			/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:padding="8dp"
			android:text="@string/preference_rename_format_stap"
			android:textAppearance="?android:attr/textAppearanceSmall"
			android:textIsSelectable="true"
			tools:ignore="HardcodedText"
			/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:padding="8dp"
			android:text="@string/preference_rename_format_stah"
			android:textAppearance="?android:attr/textAppearanceSmall"
			android:textIsSelectable="true"
			tools:ignore="HardcodedText"
			/>

		<!-- Pokemon CP -->
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="CP"
			android:textAppearance="?android:attr/textAppearance"
			android:textColor="@color/red_700"
			android:textIsSelectable="true"
			android:textStyle="bold"
			tools:ignore="HardcodedText"
			/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:padding="8dp"
			android:text="@string/preference_rename_format_cp"
			android:textAppearance="?android:attr/textAppearanceSmall"
			android:textIsSelectable="true"
			tools:ignore="HardcodedText"
			/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:padding="8dp"
			android:text="@string/preference_rename_format_cpl"
			android:textAppearance="?android:attr/textAppearanceSmall"
			android:textIsSelectable="true"
			tools:ignore="HardcodedText"
			/>

		<!-- Move -->
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="Move"
			android:textAppearance="?android:attr/textAppearance"
			android:textColor="@color/red_700"
			android:textIsSelectable="true"
			android:textStyle="bold"
			tools:ignore="HardcodedText"
			/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:padding="8dp"
			android:text="@string/preference_rename_format_mv1"
			android:textAppearance="?android:attr/textAppearanceSmall"
			android:textIsSelectable="true"
			tools:ignore="HardcodedText"
			/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:padding="8dp"
			android:text="@string/preference_rename_format_mv2"
			android:textAppearance="?android:attr/textAppearanceSmall"
			android:textIsSelectable="true"
			tools:ignore="HardcodedText"
			/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:padding="8dp"
			android:text="@string/preference_rename_format_mv1."
			android:textAppearance="?android:attr/textAppearanceSmall"
			android:textIsSelectable="true"
			tools:ignore="HardcodedText"
			/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:padding="8dp"
			android:text="@string/preference_rename_format_mv2."
			android:textAppearance="?android:attr/textAppearanceSmall"
			android:textIsSelectable="true"
			tools:ignore="HardcodedText"
			/>

		<!-- Move type -->
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="Move type"
			android:textAppearance="?android:attr/textAppearance"
			android:textColor="@color/red_700"
			android:textIsSelectable="true"
			android:textStyle="bold"
			tools:ignore="HardcodedText"
			/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:padding="8dp"
			android:text="@string/preference_rename_format_mvt1"
			android:textAppearance="?android:attr/textAppearanceSmall"
			android:textIsSelectable="true"
			tools:ignore="HardcodedText"
			/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:padding="8dp"
			android:text="@string/preference_rename_format_mvt2"
			android:textAppearance="?android:attr/textAppearanceSmall"
			android:textIsSelectable="true"
			tools:ignore="HardcodedText"
			/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:padding="8dp"
			android:text="@string/preference_rename_format_mvt1."
			android:textAppearance="?android:attr/textAppearanceSmall"
			android:textIsSelectable="true"
			tools:ignore="HardcodedText"
			/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:padding="8dp"
			android:text="@string/preference_rename_format_mvt2."
			android:textAppearance="?android:attr/textAppearanceSmall"
			android:textIsSelectable="true"
			tools:ignore="HardcodedText"
			/>

		<!-- Move power -->
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="Move power"
			android:textAppearance="?android:attr/textAppearance"
			android:textColor="@color/red_700"
			android:textIsSelectable="true"
			android:textStyle="bold"
			tools:ignore="HardcodedText"
			/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:padding="8dp"
			android:text="@string/preference_rename_format_mvp1"
			android:textAppearance="?android:attr/textAppearanceSmall"
			android:textIsSelectable="true"
			tools:ignore="HardcodedText"
			/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:padding="8dp"
			android:text="@string/preference_rename_format_mvp2"
			android:textAppearance="?android:attr/textAppearanceSmall"
			android:textIsSelectable="true"
			tools:ignore="HardcodedText"
			/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:padding="8dp"
			android:text="@string/preference_rename_format_mvp1p"
			android:textAppearance="?android:attr/textAppearanceSmall"
			android:textIsSelectable="true"
			tools:ignore="HardcodedText"
			/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:padding="8dp"
			android:text="@string/preference_rename_format_mvp2p"
			android:textAppearance="?android:attr/textAppearanceSmall"
			android:textIsSelectable="true"
			tools:ignore="HardcodedText"
			/>

		<!-- Pokemon type -->
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="Pokemon type"
			android:textAppearance="?android:attr/textAppearance"
			android:textColor="@color/red_700"
			android:textIsSelectable="true"
			android:textStyle="bold"
			tools:ignore="HardcodedText"
			/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:padding="8dp"
			android:text="@string/preference_rename_format_typ1"
			android:textAppearance="?android:attr/textAppearanceSmall"
			android:textIsSelectable="true"
			tools:ignore="HardcodedText"
			/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:padding="8dp"
			android:text="@string/preference_rename_format_typ2"
			android:textAppearance="?android:attr/textAppearanceSmall"
			android:textIsSelectable="true"
			tools:ignore="HardcodedText"
			/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:padding="8dp"
			android:text="@string/preference_rename_format_typ1."
			android:textAppearance="?android:attr/textAppearanceSmall"
			android:textIsSelectable="true"
			tools:ignore="HardcodedText"
			/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:padding="8dp"
			android:text="@string/preference_rename_format_typ2."
			android:textAppearance="?android:attr/textAppearanceSmall"
			android:textIsSelectable="true"
			tools:ignore="HardcodedText"
			/>

		<!-- Note -->
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:paddingTop="8dp"
			android:text="@string/preference_rename_format_note"
			android:textAppearance="?android:attr/textAppearance"
			android:textColor="@color/black"
			android:textIsSelectable="true"
			tools:ignore="HardcodedText"
			/>

	</LinearLayout>

</android.support.v4.widget.NestedScrollView>